--- a/p7/index.html
+++ b/p7/index.html
@@ -22,7 +22,7 @@
       <div class="content">
         <ul>
           <li>
-            <img src="img/2048_1.jpg" alt="2048 img">
+            <img src="img/2048p.jpg" alt="2048 img">
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
